# RustTip

./: Cargo.toml  README.md
src/: main.rs
src/modules/: app.rs  cli.rs  config.rs  mod.rs  nvidia.rs  util.rs
